--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.2",
+    "@types/node": "~14",
     "@types/node-fetch": "^2.5.10",
     "@vercel/ncc": "^0.28.5",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": ">=14.16.0",
+    "yarn": ">=1.22.10"
   }
 }
