--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,5 +32,5 @@ jobs:
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add .
-          git commit -m "build: Transpile"
+          git commit -m "build: Transpile" || echo "No changes to commit"
           git push origin HEAD
